--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="{% static '/css/allcss.css' %}">
     
 </head>
-<body>
+<body style="background:url('{%static 'images/BG.jpg' %}') no-repeat; background-size: cover;
+background-repeat: no-repeat;
+background-attachment: fixed;" >
     {% include 'nav.html'%}
     {% block content %}
     {% endblock %}
